added build script

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Typiskt svenskt</title>
-</head>
-<body>
-    <header class="header">
-        <h1>Känn ditt land</h1>
-    </header>
-
-    <main role="main"></main>
-
-    <footer></footer>
-    
-    <script src="src/scripts/index.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><link rel="stylesheet" href="/scripts.ed13cbbe.css"><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Typiskt svenskt</title></head><body> <header class="header"> <h1>Känn ditt land</h1> </header> <main role="main"></main> <footer></footer> <script src="/scripts.cb8da31a.js"></script>
+</body></html>
