html and css almost done

--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,184 @@
-<!DOCTYPE html><html lang="en"><head><link rel="stylesheet" href="/scripts.ed13cbbe.css"><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Typiskt svenskt</title></head><body> <header class="header"> <h1>Känn ditt land</h1> </header> <main role="main"></main> <footer></footer> <script src="/scripts.cb8da31a.js"></script>
-</body></html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
+        <link rel="stylesheet" href="style.css">
+        <title>Typiskt svenskt</title>
+    </head>
+    <body> 
+        <div class="max">
+            <header class="header"> 
+
+                <div class="h">
+                    <div class="header__image">
+                        <img src="./images/h.png" alt="">
+                    </div>
+                    <div class="header__heading">
+                        <h1>Typiskt</h1> 
+                        <h1>svenskt.</h1> 
+                    </div>
+                </div> <!--</h>-->
+
+                <div class="h2">
+                    <div class="empty"></div>
+                    <div class="header__text">
+                        <p>För oss är landet mer än avlångt!</p>
+                        <p>Vi letar oss djupare in i skogen, högre upp på bergen, värnar om natur och kultur. Svemestrar enkelt, smart och hållbart!</p> 
+                    </div>
+                </div>
+                
+            </header> 
+
+            <main role="main" class="main">
+                <section class="info">
+                    <h2>-1,8 kg co2</h2>
+                    <p>Visste du att det är kimatsmartare att <br>turista i fjällstuga än att stanna hemma?</p>
+                    <a href="">Läs mer här</a>
+                </section>
+
+
+                <section class="text-box">
+                    <div class="wrapper">
+                        <div class="wrapper__title">
+                            <h2>Koncept</h2>
+                        </div>
+                        <div class="wrapper__para">
+                            <p>Vårt koncept går ut på att det ska vara självklart att svemestra. Det är minst lika bra att resa runt i Sverige som utanför. </p>
+                            <p>Genom termen “typiskt svenskt” speglar vi olika delar runt om i Sverige som är allt ifrån pudriga fjäll till vita stränder med ljuvlig värme. Alltså, något som resenärer kanske vanligtvis väljer att åka utanför landets gränser för. Men varför lägga dyra summor, tid och framför allt mängder av koldioxid när det finns runt hörnet?</p>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="text-box">
+                    <div class="wrapper">
+                        <div class="wrapper__title">
+                            <h2>Kampanj</h2>
+                        </div>
+                        <div class="wrapper__para">
+                            <p>
+                                Vår kampanj gör att det skapas kännedom om Svenska Turistföreningen då “typiskt svenskt” är något man hajar till på vid första ögonkast.
+                                Vad som är svenskt tolkas på flera olika sätt och vår vision är att man ska mötas på mitten och se Sverige som något vackert med otroligt många möjligheter.
+                                Vårt val av bilder talar om att det är många spännande, unika platser runt om i landet som ger en känsla av utlandet. Här väckas tankar och funderingar om det verkligen är Sverige eller inte.
+                                I och med att kampanjen är anpassningsbar och bred når vi även ut till nuvarande medlemmar med olika intressen och drömmar.
+                            </p>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="poster-preview">
+                    <div class="poster-preview__wrapper">
+                        <img src="./images/swe-city.png" alt="Swedish city" class="img">
+                    </div>
+                    <div class="poster-preview__wrapper">
+                        <img src="./images/swe-beach.png" alt="Swedish beach" class="img">
+                    </div>
+                </section>
+
+                <section class="quote">
+                    <div>
+                        <p>
+                            ”Jag är medlem på grund av deras<br> 
+                            service i fjället!” – Prenumerant
+                        </p>
+                    </div>
+                </section>
+
+                <section class="communication">
+                    <div  class="communication__heading">
+                        <h1>Kommunikation</h1>
+                    </div>
+
+                    <div class="text-box">
+                        <div class="wrapper">
+                            <div class="wrapper__title">
+                                <h2>Kanaler</h2>
+                            </div>
+                            <div class="wrapper__para">
+                                <p>
+                                    Vi tror på att vi når ut till eran målgrupp genom de kanaler som används flitigt idag.
+                                    Genom att uppmana medlemmar att dela sina egna upplevelser och smultronställen runt om i landet genom en hashtag #typisktsvenskt, kommer detta få medlemmar att förnya sitt medlemskap och få upp ögonen för fler destinationer.
+                                    Även annonser kommer att visas i sociala medier, främst instagram och facebook som Svenska Turistföreningens medlemmar är vana vid att använda idag.
+                                    Printannonserna kommer fånga blicken i vardagsmiljöer som väcker tankar och intresse kring vad som är “typiskt svenskt”.
+                                </p>
+                            </div>
+                        </div>
+                    </div> <!--</text-box>-->
+
+                    <div class="communication__insta">
+                        <div class="communication__insta-wrapper">
+                            <div>
+                                <img src="./images/instagram-post.png" alt="Instagram inlägg" class="img">
+                            </div>
+                            <h3>Instagram inlägg</h3>
+                        </div>
+                        <div class="communication__insta-wrapper">
+                            <div>
+                                <img src="./images/instagram-story.jpg" alt="Instagram story" class="img">
+                            </div>
+                            <h3>Instagram händelse</h3>
+                        </div>
+                    </div><!--</communication__insta>-->
+
+                    <div class="communication__mockup">
+                        <div class="communication__mockup-wrapper">
+                            <div class="mockup-img">
+                                <img src="./images/mockup-magasine.jpg" alt="Mockup in magasine" class="img">
+                            </div>
+                            <div class="mockup-text">
+                                <h3>Magasin/Tidning</h3>
+                                <p>Vi tror på att vi når ut till eran målgrupp genom de kanaler som används flitigt idag.</p>
+                            </div>
+                        </div>
+                        <div class="communication__mockup-wrapper align-right">
+                            <div class="mockup-img">
+                                <img src="./images/mockup-bus.jpg" alt="Mockup on bus station" class="img">
+                            </div>
+                            <div class="mockup-text">
+                                <h3>Skyltar ute</h3>
+                                <p>Vi tror på att vi når ut till eran målgrupp genom de kanaler som används flitigt idag.</p>
+                            </div>
+                        </div>
+                    </div><!--</communication__mockup>-->
+                </section>
+
+                <section class="campaign">
+                    <div class="campaign__heading">
+                        <h2>Kampanjbilder</h2>
+                    </div>
+                    <div class="campaign__images">
+                        <div class="campaign__image-wrapper">
+                            <img src="./images/swe-city.png" alt="Swedish city" class="img">
+                        </div>
+                        <div class="campaign__image-wrapper">
+                            <img src="images/swe-sunset.png" alt="Swedish sunset" class="img">
+                        </div>
+                        <div class="campaign__image-wrapper">
+                            <img src="images/swe-mountain.png" alt="Swedish mountain" class="img">
+                        </div>
+                        <div class="campaign__image-wrapper">
+                            <img src="./images/swe-beach.png" alt="Swedish beach" class="img">
+                        </div>
+                    </div><!--</campaign_images>-->
+                </section>
+            </main> 
+
+            <footer class="footer">
+                <div class="footer__text">
+                    <p>Tack för att du har kollat!</p>
+                </div>
+                <div class="footer__logo">
+                    <div>
+                        <img src="./images/logo.png" alt="STF logga" class="img">
+                    </div>
+                    <div>
+                        <p>Grupp 1</p>
+                    </div>
+                </div>
+            </footer>
+        </div> <!--</max>-->
+
+        <script src="index.js"></script>
+</body>
+</html>
