--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
                 <div class="h">
                     <div class="header__image">
-                        <img src="./images/h.png" alt="">
+                        <img src="./images/hero.jpg" alt="">
                     </div>
                     <div class="header__heading">
                         <h1>Typiskt</h1> 
@@ -127,8 +127,8 @@
                                 <img src="./images/mockup-magasine.jpg" alt="Mockup in magasine" class="img">
                             </div>
                             <div class="mockup-text">
-                                <h3>Magasin/Tidning</h3>
-                                <p>Vi tror på att vi når ut till eran målgrupp genom de kanaler som används flitigt idag.</p>
+                                <h3>Annons magasin</h3>
+                                <p>Kampanjens annons i tidningen Naturkompaniet 365 i halv- och helsida. Annonsen har en enkel och tydlig layout som passar in i tidningen men har en text som sticker ut och fångar blickar. Den har en tydlig avsändare och attraktivt bildmaterial för utforskare.</p>
                             </div>
                         </div>
                         <div class="communication__mockup-wrapper align-right">
@@ -136,8 +136,8 @@
                                 <img src="./images/mockup-bus.jpg" alt="Mockup on bus station" class="img">
                             </div>
                             <div class="mockup-text">
-                                <h3>Skyltar ute</h3>
-                                <p>Vi tror på att vi når ut till eran målgrupp genom de kanaler som används flitigt idag.</p>
+                                <h3>Annons busshållsplats</h3>
+                                <p>Att annonsera på stan är en nyckel för att nå människor i det stora städerna som drivs av kollektivtrafik, upptagna människor och mycket rörelse. Vi får mycket exponering via sociala medier men vi fångar också upp de med annan bakgrund och de som inte känner till STF sedan innan genom skyltar på stan.</p>
                             </div>
                         </div>
                     </div><!--</communication__mockup>-->
