--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                     <div class="empty"></div>
                     <div class="header__text">
                         <p>För oss är landet mer än avlångt!</p>
-                        <p>Vi letar oss djupare in i skogen, högre upp på bergen, värnar om natur och kultur. Svemestrar enkelt, smart och hållbart!</p> 
+                        <p>Vi letar oss djupare in i skogen, högre upp på bergen, värnar om natur och kultur. Svemestrar enkelt, smart och hållbart!</p>
                     </div>
                 </div>
                 
@@ -35,7 +35,7 @@
                 <section class="info">
                     <h2>-1,8 kg co2</h2>
                     <p>Visste du att det är kimatsmartare att <br>turista i fjällstuga än att stanna hemma?</p>
-                    <a href="">Läs mer här</a>
+                    <a href="https://www.svenskaturistforeningen.se/om-stf/aktuellt/klimatsmartare-att-turista-i-fjallstuga-an-att-stanna-hemma/">Läs mer här</a>
                 </section>
 
 
@@ -45,7 +45,7 @@
                             <h2>Koncept</h2>
                         </div>
                         <div class="wrapper__para">
-                            <p>Vårt koncept går ut på att det ska vara självklart att svemestra. Det är minst lika bra att resa runt i Sverige som utanför. </p>
+                            <p>Vårt koncept går ut på att det ska vara självklart att svemestra. Det är minst lika bra att resa runt i Sverige som utanför.</p>
                             <p>Genom termen “typiskt svenskt” speglar vi olika delar runt om i Sverige som är allt ifrån pudriga fjäll till vita stränder med ljuvlig värme. Alltså, något som resenärer kanske vanligtvis väljer att åka utanför landets gränser för. Men varför lägga dyra summor, tid och framför allt mängder av koldioxid när det finns runt hörnet?</p>
                         </div>
                     </div>
@@ -57,12 +57,10 @@
                             <h2>Kampanj</h2>
                         </div>
                         <div class="wrapper__para">
-                            <p>
-                                Vår kampanj gör att det skapas kännedom om Svenska Turistföreningen då “typiskt svenskt” är något man hajar till på vid första ögonkast.
-                                Vad som är svenskt tolkas på flera olika sätt och vår vision är att man ska mötas på mitten och se Sverige som något vackert med otroligt många möjligheter.
-                                Vårt val av bilder talar om att det är många spännande, unika platser runt om i landet som ger en känsla av utlandet. Här väckas tankar och funderingar om det verkligen är Sverige eller inte.
-                                I och med att kampanjen är anpassningsbar och bred når vi även ut till nuvarande medlemmar med olika intressen och drömmar.
-                            </p>
+                            <p>Vår kampanj gör att det skapas kännedom om Svenska Turistföreningen då “typiskt svenskt” är något man hajar till på vid första ögonkast.</p>
+                            <p>Vad som är svenskt tolkas på flera olika sätt och vår vision är att man ska mötas på mitten och se Sverige som något vackert med otroligt många möjligheter.
+                                Vårt val av bilder talar om att det är många spännande, unika platser runt om i landet som ger en känsla av utlandet. Här väcks tankar och funderingar om det verkligen är Sverige eller inte.</p>
+                            <p>I och med att kampanjen är anpassningsbar och bred når vi även ut till nuvarande medlemmar som har olika intressen och drömmar.</p>
                         </div>
                     </div>
                 </section>
@@ -86,7 +84,7 @@
                 </section>
 
                 <section class="communication">
-                    <div  class="communication__heading">
+                    <div class="communication__heading">
                         <h1>Kommunikation</h1>
                     </div>
 
@@ -96,12 +94,10 @@
                                 <h2>Kanaler</h2>
                             </div>
                             <div class="wrapper__para">
-                                <p>
-                                    Vi tror på att vi når ut till eran målgrupp genom de kanaler som används flitigt idag.
-                                    Genom att uppmana medlemmar att dela sina egna upplevelser och smultronställen runt om i landet genom en hashtag #typisktsvenskt, kommer detta få medlemmar att förnya sitt medlemskap och få upp ögonen för fler destinationer.
-                                    Även annonser kommer att visas i sociala medier, främst instagram och facebook som Svenska Turistföreningens medlemmar är vana vid att använda idag.
-                                    Printannonserna kommer fånga blicken i vardagsmiljöer som väcker tankar och intresse kring vad som är “typiskt svenskt”.
-                                </p>
+                                <p>Vi kommer att nå ut till er målgrupp genom de kanaler som redan används flitigt idag, sociala medier. Annonserna kommer att visas på Instagram och Facebook där Svenska Turistföreningen redan har mycket aktivitet från medlemmar.</p>
+                                <br>
+                                <p>Genom att uppmana medlemmar att dela sina egna upplevelser och smultronställen runt om i landet genom en hashtag #typisktsvenskt, kommer detta få medlemmar att förnya sitt medlemskap och få upp ögonen för fler destinationer.
+                                    Printannonserna kommer fånga blicken i vardagsmiljöer som väcker tankar och intresse kring vad som är “typiskt svenskt”.</p>
                             </div>
                         </div>
                     </div> <!--</text-box>-->
