--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
                         <img src="./images/hero.jpg" alt="">
                     </div>
                     <div class="header__heading">
-                        <h1>Typiskt</h1> 
-                        <h1>svenskt.</h1> 
+                        <h1 class="animate-pop-in delay1">Typiskt</h1> 
+                        <h1 class="animate-pop-in delay2">svenskt.</h1> 
                     </div>
                 </div> <!--</h>-->
 
